--- a/site/_themes/hyde/includes/default.njk
+++ b/site/_themes/hyde/includes/default.njk
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="{{ site.locale }}">
 {% include "head.njk" %}
-<body data-path="{{ page.filePathStem }}">
+<body>
 
 {% include "sidebar.njk" %}
 
