--- a/site/_themes/hyde/page.njk
+++ b/site/_themes/hyde/page.njk
@@ -1,5 +1,5 @@
 {% extends "default.njk" %}
 
-{% block content %}    <article class="">
-      <h1>{{ title }}</h1>
+{% block content %}    <article class="post" data-input-path="{{ page.filePathStem }}">
+      <h1 class="post-title">{{ title }}</h1>
 {{ content | safe }}    </article>{% endblock %}
