--- a/site/_themes/hyde/post.njk
+++ b/site/_themes/hyde/post.njk
@@ -1,6 +1,6 @@
 {% extends "default.njk" %}
 
-{% block content %}    <article class="post">
+{% block content %}    <article class="post" data-input-path="{{ page.filePathStem }}">
       <h1 class="post-title">{{ title }}</h1>
-      <time class="post-date" datetime="{{date | dateISO }}">{{ date | dateFormat }}</time>
+      <time class="post-date" datetime="{{ date | dateISO }}">{{ date | dateFormat('LL') }}</time>
 {{ content | safe }}    </article>{% endblock %}
