--- a/site/_themes/hyde/includes/default.njk
+++ b/site/_themes/hyde/includes/default.njk
@@ -10,12 +10,12 @@
   </div>
 
   {% block Scripts -%}
-  <script src="/js/scripts.min.js"></script>
+  <!--<script src="/js/scripts.min.js"></script>-->
   {%- endblock %}
-  {# <script>
+  <!--<script>
     [...document.getElementsByTagName('time')].forEach(el => {
       el.innerHTML = new Date(el.getAttribute("datetime")).toLocaleDateString('');
     });
-  </script> #}
+  </script>-->
 </body>
 </html>
