--- a/site/_themes/hyde/includes/sidebar.njk
+++ b/site/_themes/hyde/includes/sidebar.njk
@@ -12,7 +12,7 @@
         <a class="sidebar-nav-item{% if page.url == item.url %} active{% endif %}" href="{{ item.url }}">{{ item.data.title }}</a>
         {%- endfor %}
 
-        <a class="sidebar-nav-item" href="{{ pkg.homepage }}" target="_blank">GitHub project</a>
+        <a class="sidebar-nav-item" href="{{ pkg.homepage }}" rel="noopener" target="_blank">GitHub project</a>
         <span class="sidebar-nav-item">Currently v{{ pkg.version }}</span>
       </nav>
 
