--- a/site/_themes/hyde/post.njk
+++ b/site/_themes/hyde/post.njk
@@ -8,11 +8,7 @@
       <h2>Related Posts</h2>
       <ul class="related-posts">
         {% for post in collections.posts | reverse %}{% if post.url != page.url %}<li>
-            <h3>
-              <a href="{{ post.url }}">
-                {{ post.data.title }}
-                <small>{{ post.date | dateFormat('LL') }}</small>
-              </a>
+            <h3><a href="{{ post.url }}">{{ post.data.title }} <small>{{ post.date | dateFormat('LL') }}</small></a>
             </h3>
           </li>{% endif %}{% endfor %}
       </ul>
