--- a/site/index.njk
+++ b/site/index.njk
@@ -1,10 +1,14 @@
 {% extends "default.njk" %}
 
-{% block content %}    <div class="posts">
-    {% for post in collections.posts | reverse | limit(3) -%}
-    <article class="post" data-input-path="{{ post.filePathStem }}">
-      <h1 class="post-title"><a href="{{ post.url }}">{{ post.data.title }}</a></h1>
-      <time class="post-date" datetime="{{ post.date | dateISO }}">{{ post.date | dateFormat('LL') }}</time>
-{{ post.templateContent | safe }}    </article>
-    {% endfor %}
-    </div>{% endblock %}
+{% block content %}
+    <div class="posts">
+      {% for post in collections.posts | reverse | limit(3) %}
+      <article class="post" data-input-path="{{ post.filePathStem }}">
+        <h1 class="post-title"><a href="{{ post.url }}">{{ post.data.title }}</a></h1>
+        <time class="post-date" datetime="{{ post.date | dateISO }}">{{ post.date | dateFormat('LL') }}</time>
+{{ post.templateContent | safe | trim }}
+      </article>
+
+      {% endfor %}
+    </div>
+{% endblock %}
