--- a/site/_themes/hyde/layouts/head.njk
+++ b/site/_themes/hyde/layouts/head.njk
@@ -9,6 +9,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   {% block CSS %}
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap">
   <link rel="stylesheet" href="/css/styles.min.css">
   {% endblock %}
 
