--- a/site/_themes/hyde/layouts/sidebar.njk
+++ b/site/_themes/hyde/layouts/sidebar.njk
@@ -11,8 +11,10 @@
         <a class="sidebar-nav-item{% if page.url == item.url %} active{% endif %}" href="{{ item.url }}">{{ item.data.title }}</a>
         {% endfor %}
         <br>
-        <a class="sidebar-nav-item" href="{{ pkg.homepage }}" rel="noopener" target="_blank">GitHub project</a>
-        <span class="sidebar-nav-item">Currently v{{ pkg.version }}</span>
+        <div style="font-size:80%;">
+          <a class="sidebar-nav-item" href="{{ pkg.homepage }}" rel="noopener" target="_blank">GitHub project</a>
+          <span class="sidebar-nav-item">Currently v{{ pkg.version }}</span>
+        </div>
       </nav>
 
       <p>&copy; {{ site.time | dateFormat('YYYY') }} All rights reserved.</p>
