--- a/site/_themes/hyde/css/styles.css
+++ b/site/_themes/hyde/css/styles.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css2?family=Abril+Fatface&family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap);
+
 @import poole.css;
 @import hyde.css;
 
