Embed CSS + Axe

--- a/site/_themes/hyde/layouts/default.njk
+++ b/site/_themes/hyde/layouts/default.njk
@@ -5,7 +5,7 @@
 
 {% include "sidebar.njk" %}
 
-  <div class="content container">
+  <div role="main" class="content container">
 {% block content %}{{ content | safe }}{% endblock %}
   </div>
 
