--- a/site/_themes/hyde/layouts/head.njk
+++ b/site/_themes/hyde/layouts/head.njk
@@ -7,9 +7,6 @@
   <link rel="shortcut icon" href="/favicon-32x32.png" sizes="32x32">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-{% block CSS %}
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="/css/styles.min.css">
-{% endblock %}
+  <style>{% include "css/styles.css" %}</style>
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 </head>
