--- a/site/_themes/hyde/layouts/sidebar.njk
+++ b/site/_themes/hyde/layouts/sidebar.njk
@@ -1,4 +1,4 @@
-  <div class="sidebar">
+  <div role="region" class="sidebar">
     <div class="container sidebar-sticky">
       <div class="sidebar-about">
         <h1><a href="/">{{ site.title }}</a></h1>
