--- a/site/_themes/hyde/css/styles.css
+++ b/site/_themes/hyde/css/styles.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Abril+Fatface&family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap);
+@import fonts.css;
 
 @import poole.css;
 @import hyde.css;
