--- a/site/_themes/hyde/css/styles.css
+++ b/site/_themes/hyde/css/styles.css
@@ -1,7 +1,9 @@
-@import "fonts.css";
+@import "./fonts.css";
 
-@import "poole.css";
-@import "hyde.css";
+@import "./poole.css";
+@import "./hyde.css";
+
+@import "highlight.js/styles/github.css";
 
 article {content-visibility: auto;}
 article img {width:100%; height:auto;}
