--- a/site/_themes/hyde/css/fonts.css
+++ b/site/_themes/hyde/css/fonts.css
@@ -1,30 +1,35 @@
+/* abril-fatface-regular - latin */
 @font-face {
   font-family: 'Abril Fatface';
-  src: url('/fonts/abrilfatface-regular.woff2') format('woff2'), url('/fonts/abrilfatface-regular.woff') format('woff');
-  font-weight: normal;
   font-style: normal;
+  font-weight: 400;
   font-display: swap;
+  src: local(''), url('/fonts/abril-fatface-v12-latin-regular.woff2') format('woff2'), url('/fonts/abril-fatface-v12-latin-regular.woff') format('woff');
 }
 
-
+/* pt-sans-regular - latin */
 @font-face {
   font-family: 'PT Sans';
-  src: url('/fonts/ptsans-regular.woff2') format('woff2'), url('/fonts/ptsans-regular.woff') format('woff');
-  font-weight: normal;
   font-style: normal;
+  font-weight: 400;
   font-display: swap;
+  src: local(''), url('/fonts/pt-sans-v12-latin-regular.woff2') format('woff2'), url('/fonts/pt-sans-v12-latin-regular.woff') format('woff');
 }
+
+/* pt-sans-italic - latin */
 @font-face {
   font-family: 'PT Sans';
-  src: url('/fonts/ptsans-italic.woff2') format('woff2'), url('/fonts/ptsans-italic.woff') format('woff');
-  font-weight: normal;
   font-style: italic;
+  font-weight: 400;
   font-display: swap;
+  src: local(''), url('/fonts/pt-sans-v12-latin-italic.woff2') format('woff2'), url('/fonts/pt-sans-v12-latin-italic.woff') format('woff');
 }
+
+/* pt-sans-700 - latin */
 @font-face {
   font-family: 'PT Sans';
-  src: url('/fonts/ptsans-bold.woff2') format('woff2'), url('/fonts/ptsans-bold.woff') format('woff');
-  font-weight: bold;
   font-style: normal;
+  font-weight: 700;
   font-display: swap;
+  src: local(''), url('/fonts/pt-sans-v12-latin-700.woff2') format('woff2'), url('/fonts/pt-sans-v12-latin-700.woff') format('woff');
 }
