--- a/site/_themes/hyde/layouts/head.njk
+++ b/site/_themes/hyde/layouts/head.njk
@@ -8,5 +8,5 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <style>{% include "css/styles.css" %}</style>
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/feeds.xml">
 </head>
