--- a/site/_themes/hyde/css/styles.css
+++ b/site/_themes/hyde/css/styles.css
@@ -18,3 +18,12 @@ a {color: #1a6091;}                             /* darken(#268bd2, 15%); */
 @media (min-width: 48em) {
   .sidebar-nav-item {line-height: 1.75;}
 }
+
+/* v1.0.0  WCAG2AA sidebar & example-content page */
+.sidebar {color: rgb(255, 255, 255, 0.6);}
+blockquote {color: #666666;}  /* darken(#7a7a7a, 8%) */
+code {color: #b04751;}        /* darken(#bf616a, 8%) */
+
+/* Every base-16 set has to be reset */
+.theme-base-08 .sidebar {background-color: #622526;} /* darken(#ac4142, 20%) */
+.theme-base-08 .content a, .theme-base-08 .related-posts li a:hover {color: #ac4142;} /* Ok */
