--- a/site/_themes/hyde/layouts/post.njk
+++ b/site/_themes/hyde/layouts/post.njk
@@ -7,7 +7,7 @@
 {{ content | safe | trim }}
     </article>
 
-    <div class="related">
+    <!-- <div class="related">
       <h2>Related Posts</h2>
       <ul class="related-posts">
         {% for post in collections.posts | reverse %}
@@ -16,5 +16,5 @@
         {% endif %}
         {% endfor %}
       </ul>
-    </div>
+    </div> -->
 {% endblock %}
