--- a/site/_themes/hyde/css/styles.css
+++ b/site/_themes/hyde/css/styles.css
@@ -3,7 +3,7 @@
 @import "./poole.css";
 @import "./hyde.css";
 
-@import "highlight.js/styles/github.css";
+@import "highlight.js/styles/github-dark.css";
 
 article {content-visibility: auto;}
 article img {width:100%; height:auto;}
