--- a/site/_themes/hyde/css/styles.css
+++ b/site/_themes/hyde/css/styles.css
@@ -1,3 +1,4 @@
+/*! Inlined */
 @import "./fonts.css";
 
 @import "./poole.css";
@@ -5,13 +6,13 @@
 
 @import "highlight.js/styles/github-dark.css";
 
-article {content-visibility: auto;}
+/* article {content-visibility: auto;} */
 article img {width:100%; height:auto;}
 
 /* Poole & Hyde default CSS does not pass today's lighthouse tests */
 
 a {color: #1a6091;}                             /* darken(#268bd2, 15%); */
-.post-date {color: #747474; font-size: 90%;}    /*  darken(#9a9a9a, 15%); */
+.post-date {color: #747474; font-size: 90%;}    /* darken(#9a9a9a, 15%); */
 .related-posts li small {color: #747474;}
 
 .sidebar-nav-item {line-height: 2.75;}
