--- a/site/_themes/hyde/layouts/post.njk
+++ b/site/_themes/hyde/layouts/post.njk
@@ -10,11 +10,11 @@
     <div class="related">
       <h2>Related Posts</h2>
       <ul class="related-posts">
-        {% for post in collections.posts | reverse %}
-        {% if post.url != page.url %}
+        {%- for post in collections.posts | reverse %}
+        {%- if post.url != page.url %}
         <li><h3><a href="{{ post.url }}">{{ post.data.title }} <small>{{ post.date | dateFormat('LL') }}</small></a></h3></li>
-        {% endif %}
-        {% endfor %}
+        {%- endif %}
+        {%- endfor %}
       </ul>
     </div>
 {% endblock %}
