--- a/site/_themes/hyde/layouts/default.njk
+++ b/site/_themes/hyde/layouts/default.njk
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="{{ site.locale }}">
 {% include "head.njk" %}
-<body class="theme-base-08">
+<body class="theme-base-0b">
 
 {% include "sidebar.njk" %}
 
