--- a/site/_themes/hyde/layouts/head.njk
+++ b/site/_themes/hyde/layouts/head.njk
@@ -3,10 +3,11 @@
   <title>{{ title + ' | ' if title }}{{ site.title }}</title>
   <meta name="description" content="{% if content %}{{ content | excerpt | safe }}{% else %}{{ site.tagline }}{% endif %}">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="generator" content="{{ eleventy.generator }}" built="{{ build.time | dateISO }}">
 
   <link rel="shortcut icon" href="/images/favicon-32x32.png" sizes="32x32">
   <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 
-  <style>{% include "css/styles.css" %}</style>
+  <link rel="stylesheet" href="/css/styles.min.css">
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feeds.xml">
 </head>
