--- a/site/feeds.xml.njk
+++ b/site/feeds.xml.njk
@@ -10,7 +10,7 @@ eleventyExcludeFromCollections: true
     <description>{{ site.tagline }}</description>
     <lastBuildDate>{{ site.time | dateRSS }}</lastBuildDate>
     <atom:link href="{{ site.url }}{{ page.url }}" rel="self" type="application/rss+xml"/>
-{%- for post in collections.posts | reverse | limit(20) %}
+    {% for post in collections.posts | reverse | limit(20) %}
     <item>
       <title>{{ post.data.title }}</title>
       <link>{{ site.url }}{{ post.url | url}}</link>
@@ -18,6 +18,6 @@ eleventyExcludeFromCollections: true
       <pubDate>{{ post.date | dateRSS }}</pubDate>
       <guid>{{ site.url }}{{ post.url }}</guid>
     </item>
-{%- endfor %}
+    {% endfor %}
   </channel>
 </rss>
