--- a/site/sitemap.xml.njk
+++ b/site/sitemap.xml.njk
@@ -4,10 +4,10 @@ eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
-{%- for page in collections.posts %}
+{% for page in collections.all | sort(attribute='url') %}
   <url>
     <loc>{{ site.url }}{{ page.url }}</loc>
     <lastmod>{{ page.date | dateISO }}</lastmod>
   </url>
-{%- endfor %}
+{% endfor %}
 </urlset>
